corrected some moments with z-index

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -143,7 +143,7 @@ body {
 	opacity: 0;
 
 	&--active {
-		z-index: 4;
+		z-index: 6;
 		opacity: 1;
 	}
 }
