--- a/src/scss/components/header/_header-top.scss
+++ b/src/scss/components/header/_header-top.scss
@@ -1,6 +1,6 @@
 .header-top {
 	position: relative;
-	z-index: 5;
+	z-index: 7;
 	padding: 21px 0;
 	color: $white;
 	font-size: 16px;
